// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules / Toggle Controlled behaviour 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: #FFFFFF;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 0px;
  border: 1px solid #BDBDBD;
  margin-top: -4px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c11 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c7 {
  position: relative;
}

.c6 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c6[disabled] .c10,
.c6[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c6[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c6[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
  className="c0"
>
   
  <label
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c4"
        >
          Notify me by email
        </span>
      </span>
      <span
        className="c3"
      >
        <button
          aria-checked={true}
          className="c5 c6"
          onClick={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="c7"
          >
            <span
              className="c8 c9"
            />
            <span
              className="c10 c11"
            />
          </div>
        </button>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Toggle Default Off 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: #FFFFFF;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 0px;
  border: 1px solid #BDBDBD;
  margin-top: -4px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c11 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c7 {
  position: relative;
}

.c6 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c6[disabled] .c10,
.c6[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c6[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c6[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
  className="c0"
>
   
  <label
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c4"
        >
          Notify me by email
        </span>
      </span>
      <span
        className="c3"
      >
        <button
          aria-checked={false}
          className="c5 c6"
          onClick={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="c7"
          >
            <span
              className="c8 c9"
            />
            <span
              className="c10 c11"
            />
          </div>
        </button>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Toggle Default On 1`] = `
Array [
  .c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: #FFFFFF;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 0px;
  border: 1px solid #BDBDBD;
  margin-top: -4px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c11 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c7 {
  position: relative;
}

.c6 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c6[disabled] .c10,
.c6[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c6[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c6[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

.c12[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c12[aria-checked='true'] .c8 {
  -webkit-transform: translate( 12px );
  -ms-transform: translate( 12px );
  transform: translate( 12px );
}

.c12[disabled] .c10,
.c12[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c12[disabled] .c8,
.c12[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c12[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c12[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      <span
        className="c2"
      >
        <span
          className="c3"
        >
          <span
            className="Typography__Span-sc-10mju41-0 c4"
          >
            Size: large
          </span>
        </span>
        <span
          className="c3"
        >
          <button
            aria-checked={true}
            className="c5 c6"
            onClick={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="c7"
            >
              <span
                className="c8 c9"
              />
              <span
                className="c10 c11"
              />
            </div>
          </button>
        </span>
      </span>
    </label>
  </div>,
  .c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: #FFFFFF;
  display: block;
  height: 16px;
  width: 16px;
  position: absolute;
  left: 2px;
  border: 1px solid #BDBDBD;
  margin-top: 2px;
  border-radius: 8px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c11 {
  display: block;
  height: 20px;
  width: 36px;
  margin: -2px 0;
  background-color: #E0E0E0;
  border-radius: 10px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c7 {
  position: relative;
}

.c6 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c6[disabled] .c10,
.c6[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c6[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c6[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

.c12[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c12[aria-checked='true'] .c8 {
  -webkit-transform: translate( 12px );
  -ms-transform: translate( 12px );
  transform: translate( 12px );
}

.c12[disabled] .c10,
.c12[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c12[disabled] .c8,
.c12[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c12[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c12[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      <span
        className="c2"
      >
        <span
          className="c3"
        >
          <span
            className="Typography__Span-sc-10mju41-0 c4"
          >
            Size: medium
          </span>
        </span>
        <span
          className="c3"
        >
          <button
            aria-checked={true}
            className="c5 c6"
            onClick={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="c7"
            >
              <span
                className="c8 c9"
              />
              <span
                className="c10 c11"
              />
            </div>
          </button>
        </span>
      </span>
    </label>
  </div>,
  .c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: #FFFFFF;
  display: block;
  height: 12px;
  width: 12px;
  position: absolute;
  left: 2px;
  border: 1px solid #BDBDBD;
  margin-top: 2px;
  border-radius: 6px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c11 {
  display: block;
  height: 16px;
  width: 28px;
  margin: -2px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c7 {
  position: relative;
}

.c12[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c12[aria-checked='true'] .c8 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c12[disabled] .c10,
.c12[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c12[disabled] .c8,
.c12[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c12[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c12[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

.c6 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 12px );
  -ms-transform: translate( 12px );
  transform: translate( 12px );
}

.c6[disabled] .c10,
.c6[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c6[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c6[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      <span
        className="c2"
      >
        <span
          className="c3"
        >
          <span
            className="Typography__Span-sc-10mju41-0 c4"
          >
            Size: small
          </span>
        </span>
        <span
          className="c3"
        >
          <button
            aria-checked={true}
            className="c5 c6"
            onClick={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="c7"
            >
              <span
                className="c8 c9"
              />
              <span
                className="c10 c11"
              />
            </div>
          </button>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Storyshots Molecules / Toggle Disabled 1`] = `
Array [
  .c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: #FFFFFF;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 0px;
  border: 1px solid #BDBDBD;
  margin-top: -4px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c11 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c7 {
  position: relative;
}

.c6 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c6[disabled] .c10,
.c6[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c6[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c6[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      <span
        className="c2"
      >
        <span
          className="c3"
        >
          <span
            className="Typography__Span-sc-10mju41-0 c4"
          >
            Disabled on
          </span>
        </span>
        <span
          className="c3"
        >
          <button
            aria-checked={true}
            className="c5 c6"
            disabled={true}
            onClick={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="c7"
            >
              <span
                className="c8 c9"
              />
              <span
                className="c10 c11"
              />
            </div>
          </button>
        </span>
      </span>
    </label>
  </div>,
  .c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: #FFFFFF;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 0px;
  border: 1px solid #BDBDBD;
  margin-top: -4px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c11 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c7 {
  position: relative;
}

.c6 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c6[disabled] .c10,
.c6[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c6[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c6[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      <span
        className="c2"
      >
        <span
          className="c3"
        >
          <span
            className="Typography__Span-sc-10mju41-0 c4"
          >
            Disabled off
          </span>
        </span>
        <span
          className="c3"
        >
          <button
            aria-checked={false}
            className="c5 c6"
            disabled={true}
            onClick={[Function]}
            role="switch"
            type="button"
          >
            <div
              className="c7"
            >
              <span
                className="c8 c9"
              />
              <span
                className="c10 c11"
              />
            </div>
          </button>
        </span>
      </span>
    </label>
  </div>,
]
`;

exports[`Storyshots Molecules / Toggle Read Only 1`] = `
.c4 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c6 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c6 > *:not(:first-child) {
  padding-top: 0;
}

.c7 {
  box-sizing: border-box;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  display: inline-block;
}

.c13 {
  background: #FFFFFF;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 0px;
  border: 1px solid #BDBDBD;
  margin-top: -4px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c15 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c11 {
  position: relative;
}

.c10 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c10[aria-checked='true'] .c14 {
  background-color: #336BFF;
}

.c10[aria-checked='true'] .c12 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c10[disabled] .c14,
.c10[aria-readonly] .c14 {
  background-color: #E0E0E0;
}

.c10[disabled] .c12,
.c10[aria-readonly] .c12 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c10[aria-checked='true'][disabled] .c14 {
  background-color: #D6E1FF;
}

.c10[aria-checked='true'][disabled] .c12 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 0px;
}

.c0 > * {
  padding: 0px;
  width: 100%;
  box-sizing: border-box;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #eee;
}

.c1 > * {
  padding: 20px;
  width: 100%;
  box-sizing: border-box;
}

.c2 {
  border-right: 1px solid #eee;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

<div
  className="c0"
  direction="column"
>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        Off
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
         
        <label
          className="c5"
        >
          <span
            className="c6"
          >
            <span
              className="c7"
            >
              <span
                className="Typography__Span-sc-10mju41-0 c8"
              >
                Necessary cookies
              </span>
            </span>
            <span
              className="c7"
            >
              <button
                aria-checked={false}
                aria-readonly={true}
                className="c9 c10"
                onClick={[Function]}
                role="switch"
                type="button"
              >
                <div
                  className="c11"
                >
                  <span
                    className="c12 c13"
                  />
                  <span
                    className="c14 c15"
                  />
                </div>
              </button>
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <div
    className="c1"
    direction="row"
  >
    <div
      className="c2"
    >
      <span
        className="Typography__Span-sc-10mju41-0 c3"
      >
        On
      </span>
    </div>
    <div>
      <div
        className="c4"
      >
         
        <label
          className="c5"
        >
          <span
            className="c6"
          >
            <span
              className="c7"
            >
              <span
                className="Typography__Span-sc-10mju41-0 c8"
              >
                Necessary cookies
              </span>
            </span>
            <span
              className="c7"
            >
              <button
                aria-checked={true}
                aria-readonly={true}
                className="c9 c10"
                onClick={[Function]}
                role="switch"
                type="button"
              >
                <div
                  className="c11"
                >
                  <span
                    className="c12 c13"
                  />
                  <span
                    className="c14 c15"
                  />
                </div>
              </button>
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules / Toggle With Label prop as ReactNode 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c3 {
  box-sizing: border-box;
}

.c5 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c5,
.c5[type='button'],
.c5[type='reset'],
.c5[type='submit'] {
  -webkit-appearance: button;
}

.c5::-moz-focus-inner,
.c5[type='button']::-moz-focus-inner,
.c5[type='reset']::-moz-focus-inner,
.c5[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c5:-moz-focusring,
.c5[type='button']:-moz-focusring,
.c5[type='reset']:-moz-focusring,
.c5[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c1 {
  display: inline-block;
}

.c9 {
  background: #FFFFFF;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 0px;
  border: 1px solid #BDBDBD;
  margin-top: -4px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c11 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c7 {
  position: relative;
}

.c6 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c6[aria-checked='true'] .c10 {
  background-color: #336BFF;
}

.c6[aria-checked='true'] .c8 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c6[disabled] .c10,
.c6[aria-readonly] .c10 {
  background-color: #E0E0E0;
}

.c6[disabled] .c8,
.c6[aria-readonly] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c6[aria-checked='true'][disabled] .c10 {
  background-color: #D6E1FF;
}

.c6[aria-checked='true'][disabled] .c8 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
  className="c0"
>
   
  <label
    className="c1"
  >
    <span
      className="c2"
    >
      <span
        className="c3"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c4"
        >
          Notify me by email
        </span>
      </span>
      <span
        className="c3"
      >
        <button
          aria-checked={false}
          className="c5 c6"
          onClick={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="c7"
          >
            <span
              className="c8 c9"
            />
            <span
              className="c10 c11"
            />
          </div>
        </button>
      </span>
    </span>
  </label>
</div>
`;

exports[`Storyshots Molecules / Toggle With hidden label 1`] = `
.c0 {
  padding-top: 16px;
  padding-bottom: 16px;
  background-color: transparent;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c2 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c2 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  box-sizing: border-box;
}

.c3 {
  position: absolute;
  height: 1px;
  width: 1px;
  overflow: hidden;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline-block;
}

.c10 {
  background: #FFFFFF;
  display: block;
  height: 24px;
  width: 24px;
  position: absolute;
  left: 0px;
  border: 1px solid #BDBDBD;
  margin-top: -4px;
  border-radius: 12px;
  box-sizing: border-box;
  box-shadow: 0px 1px 3px 1px rgba(0,0,0,0.05);
  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  -webkit-transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
  transition: transform 0.2s cubic-bezier(0.18,0.9,0.35,1.15);
}

.c12 {
  display: block;
  height: 16px;
  width: 40px;
  margin: 4px 0;
  background-color: #E0E0E0;
  border-radius: 8px;
  -webkit-transition: background-color 0.2s ease-out;
  transition: background-color 0.2s ease-out;
}

.c8 {
  position: relative;
}

.c7 {
  display: block;
  background: none;
  padding: 0;
  border: 0;
}

.c7[aria-checked='true'] .c11 {
  background-color: #336BFF;
}

.c7[aria-checked='true'] .c9 {
  -webkit-transform: translate( 16px );
  -ms-transform: translate( 16px );
  transform: translate( 16px );
}

.c7[disabled] .c11,
.c7[aria-readonly] .c11 {
  background-color: #E0E0E0;
}

.c7[disabled] .c9,
.c7[aria-readonly] .c9 {
  border: 1px solid #EBEBE8;
  background-color: #EEEEEE;
}

.c7[aria-checked='true'][disabled] .c11 {
  background-color: #D6E1FF;
}

.c7[aria-checked='true'][disabled] .c9 {
  border: 1px solid #EBEBE8;
  background-color: #FFFFFF;
}

<div
  className="c0"
>
   
  <label
    className="c1"
  >
    <span
      className="c2"
    >
      <div
        className="c3"
      >
        <span
          className="Typography__Span-sc-10mju41-0 c4"
        >
          Notify me by email
        </span>
      </div>
      <span
        className="c5"
      >
        <button
          aria-checked={false}
          className="c6 c7"
          onClick={[Function]}
          role="switch"
          type="button"
        >
          <div
            className="c8"
          >
            <span
              className="c9 c10"
            />
            <span
              className="c11 c12"
            />
          </div>
        </button>
      </span>
    </span>
  </label>
</div>
`;
